k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: luxe-ecommerce-service
spec:
  selector:
    app: luxe-ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
